# bridge-utils

./: .env.example  .gitmodules  Cargo.toml  README.md  scratch.sol
.github/workflows/: build.yml  musl-tests.yml
app/: Cargo.toml
app/src/: main.rs
bindings/: Cargo.toml
bindings/src/: address.rs  address_upgradeable.rs  blake_3_sol.rs  byte_strings.rs  console.rs  console_2.rs  context_upgradeable.rs  ds_test.rs  ed_25519.rs  erc1155_upgradeable.rs  erc165_upgradeable.rs  erc1967_proxy.rs  erc1967_upgrade.rs  erc1967_upgrade_upgradeable.rs  erc20.rs  i_beacon.rs  i_beacon_upgradeable.rs  i_themelio_bridge.rs  ierc1155_metadata_uri_upgradeable.rs  ierc1155_receiver_upgradeable.rs  ierc1155_upgradeable.rs  ierc165_upgradeable.rs  ierc1822_proxiable.rs  ierc1822_proxiable_upgradeable.rs  ierc20.rs  ierc20_metadata.rs  initializable.rs  lib.rs  proxy.rs  script.rs  sha_512.rs  std_error.rs  std_math.rs  std_storage.rs  storage_slot.rs  storage_slot_upgradeable.rs  strings.rs  test.rs  themelio_bridge.rs  themelio_bridge_proxy.rs  (+7 more)
cache/: solidity-files-cache.json
src/: main.rs
