[package]
name = "bridge_utils"
version = "0.1.0"
authors = ["Marco Serrano <marcoTheWebDev@gmail.com>", "Meade Kincke <meade@themelio.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
bindings = { path = "../bindings" }
blake3 = "1.2.0"
ed25519-compact = "1.0.11"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
eyre = "0.6.6"
hex = "0.4.3"
hex-literal = "0.3.1"
rand = "0.8.4"
rayon = "1.5.1"
rs_merkle = "1.1.0"
serde_json = "1.0.78"
sha3 = "0.10.0"
stdcode = "0.1.2"
themelio-stf = "0.9.7"
themelio-structs = "0.2.0"
tmelcrypt = "0.2.3"
tokio = { version = "1.17.0", features = ["macros"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true